tests/errors/other/test_tc_other_03_while_cond_type.pc
#import std.console;
int main() {
    while 42 {
        console.println("loop");
    }
    return 0;
}
